...
                    <rect key="frame" x="15" y="607" width="110" height="40"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="1d8-Df-tD1"/>
                        <constraint firstAttribute="width" constant="110" id="2oT-fX-d5l"/>
                    </constraints>
                    <state key="normal" title="Supprimer">
                        <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <connections>
                        <action selector="handleTapCloseButton:" destination="-1" eventType="touchUpInside" id="hBB-Si-Mj6"/>
                        <action selector="handleTapDeletteButton:" destination="-1" eventType="touchUpInside" id="AGR-UY-rbE"/>
                    </connections>
...
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wiT-Bk-NUQ">
                    <rect key="frame" x="250" y="607" width="110" height="40"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="110" id="iDV-5W-8sa"/>
                        <constraint firstAttribute="height" constant="40" id="oNh-rT-zHe"/>
                    </constraints>
                    <state key="normal" title="Fermer"/>
                    <connections>
                        <action selector="handleTapCloseButton:" destination="-1" eventType="touchUpInside" id="E3d-14-9fc"/>
                    </connections>
                </button>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paris" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRW-e4-Avt">
                    <rect key="frame" x="20" y="30" width="335" height="30"/>
...
