...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="weatherCity" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" restorationIdentifier="cityCollectionViewID" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bpx-Gz-gk5">
                                <rect key="frame" x="40" y="104" width="295" height="523"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <collectionViewLayout key="collectionViewLayout" id="E7y-ar-3BX"/>
                                <cells>
                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="CityCellIdentifier" reuseIdentifier="CityCellIdentifier" id="Hoi-Uf-0Sa" customClass="CityCollectionViewCell" customModule="weatherCity" customModuleProvider="target">
                                        <rect key="frame" x="0.5" y="0.0" width="294" height="130"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="79T-cy-Wfi" secondAttribute="trailing" constant="10" id="jR6-vL-sCg"/>
                            <constraint firstItem="79T-cy-Wfi" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="prj-rj-Ckk"/>
                            <constraint firstItem="79T-cy-Wfi" firstAttribute="top" secondItem="bpx-Gz-gk5" secondAttribute="bottom" id="zGv-vF-jdF"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Weather City" id="iZx-EL-9D4"/>
                    <connections>
                        <outlet property="cityCollectionView" destination="bpx-Gz-gk5" id="gU3-JN-n7N"/>
                        <outlet property="navigationItemView" destination="iZx-EL-9D4" id="Lgj-7X-Wjs"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
