...
    required init?(coder aDecoder: NSCoder) {
        super.init(coder: aDecoder)
        self.loadNibView()
    }
    
    func loadNibView() {
        self.accessibilityIdentifier = "DetailWeatherViewID"
        Bundle.main.loadNibNamed("WeatherDetailView", owner: self, options: nil)
        self.addSubview(contentView)
        contentView.frame = self.bounds
        contentView.autoresizingMask = [.flexibleWidth, .flexibleHeight]
        
        self.deletteButton.layer.cornerRadius = 10
...
